Tue Nov  2 22:39:16 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (Input_Match): Added and use this instead of
	"if (inputLook() == ...) + inputSkip() + optional skipblanks()".
	* input.h (Input_Match): Declare.
	* asm.c, fix.c, get.c, help_cop.c, lex.c, macros.c, m_cop.c, m_copmem.c,
	m_cpu.c, m_cpuctrl.c, m_cpumem.c, m_fpu.c, m_fpumem.c, option.c,
	storage.c, variables.c, whileif.c: Use Input_Match.
	* commands.c, output.c, reloc.h: Minor change.
	* symbol.c: Remove FIXME.
	(symbolPrint): Fix build.
	* code.c (codePrint): Print ??? for undetermined case.
	* lex.h (lexGetLabel): Remove.

Tue Nov  2 14:28:09 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (decode): Converted into a table lookup and push any
	additional mnemonic parsing (like condition codes) to the mnemonic
	implementation itself.
	* area.c, area.h, commands.c, commands.h, decode.h, help_lex.c,
	help_lex.h, input.c, input.h, local.c, local.h, macros.c, macros.h
	m_cop.c, m_copmem.c, m_cpu.c, m_cpuctrl.c, m_cpu.h, m_cpumem.c,
	m_fpu.c, m_fpu.h, m_fpumem.c, option.c, storage.c, storage.h,
	variables.c, variables.h, whileif.c, whileif.h: Follow above changes.
	* m_cop.h, m_copmem.h, m_cpuctrl.h, m_cpumem.h, m_fpumem.h: Added.
	* mnemonics.h: Removed.

Mon Nov  1 15:24:53 CET 2010  John Tytgat  <John.Tytgat@aaug.net>

	* storage.c (c_alloc): Simplify.
	* lex.h: Fix comment.
	* symbol.c (symbolAdd): Add description.

Mon Nov  1 14:20:09 CET 2010  John Tytgat  <John.Tytgat@aaug.net>
  
	* regression/tests_pass/operator_index.s: Add (commented out)
	unsupported case.
	* regression/tests_fail/label_space.s: Extended.  There are now only
	two unsupported cases left.
	* commands.c (c_ltorg, c_head): Count on areaCurrentSymbol being
	valid.
	(c_dcfe, c_dcfp): Removed.
	* commands.h (c_dcfe,c_dcfp): Removed.
	* symbol.c (symbolNew): Support Symbol::codeSize.
	(symbolInit): Make use of lexTempLabel.
	(symbolGet): Assume given Lex object is always a LexId.
	(symbolRemove): Likewise.